Bug 171077 - Customizing many shortcuts is not possible
Summary: Customizing many shortcuts is not possible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Neil Roberts
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: Customize-Dialog-Keyboard
  Show dependency treegraph
 
Reported: 2026-02-28 09:44 UTC by Heiko Tietze
Modified: 2026-03-17 09:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2026-02-28 09:44:52 UTC
Changing a shortcut for <Foo> followed by <Bar> seems to be possible as "Assign" looks like the association of command and shortcut is done. This however does not work unless Ok is pressed.

See also https://gerrit.libreoffice.org/c/core/+/197709
Comment 1 Neil Roberts 2026-02-28 10:06:57 UTC
Some more details:

On the keyboard tab, you can assign as many shortcuts as you want but you have to press OK before they take effect. If you change the radio button to select between the app or module level then any shortcuts that you have assigned without pressing OK are silently forgotten. This is a very confusing UX.

The other tabs of the customization dialog have a similar scope selection. However they let you customise items for multiple scopes without having to close the dialog box before changing the scope. For most of the tabs you do still have to press OK before the changes actually take effect though. Personally I think that makes sense. However, any changes on the toolbar tab actually take effect immediately without having to press OK. Even if you press cancel the toolbar changes remain. This is a bit inconsistent and confusing.
Comment 2 Neil Roberts 2026-03-01 09:35:21 UTC
I had a got at making it so you can switch between scopes in the keyboard dialog without it forgetting all of the pending assignments here: https://gerrit.libreoffice.org/c/core/+/200697
Comment 3 support 2026-03-07 06:56:00 UTC Comment hidden (spam)
Comment 4 Commit Notification 2026-03-08 07:44:30 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a1c00d4e3db74c6661266cf57eedae873dcd5238

tdf#171077: Allow customizing shortcuts for multiple scopes

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Neil Roberts 2026-03-08 10:39:07 UTC
I merged the patch to make it possible to assign shortcuts for multiple scopes without having to press OK between scopes. I believe that was the purpose of this bug report as it came out of the discussions for this commit:

https://gerrit.libreoffice.org/c/core/+/197709

However I have to admit I’m not sure if I fully understood the description of this bug report. Heiko, I wonder if you could confirm whether the patch addresses the issue or whether there is a further problem that should be fixed.
Comment 6 Heiko Tietze 2026-03-17 07:53:47 UTC
Works like a charm. I can assign multiple shortcuts and only Ok makes the (full) customization effective. Please change the status to fixed so I can verify.