tdf#171077: Allow customizing shortcuts for multiple scopes

Previously whenever the scope is changed in the accelerator
configuration dialog it would silently forget any pending assignments.
This patch makes it instead store an array of assignments for each
possible scope and then apply them all when FillItemSet is called. The
arrays are lazily created as each scope is accessed.

Change-Id: I0cbff7945f7c11c0498c63314e288f45495529ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200697
Reviewed-by: Neil Roberts <bpeeluk@yahoo.co.uk>
Tested-by: Jenkins