cui/source/inc/acccfg.hxx
@@ -51,6 +51,7 @@ enum class StartFileDialogType
 };
 
 class ComponentDisposedListener;
+struct AssignmentData;
 
 class SfxAcceleratorConfigPage : public SfxTabPage
 {
@@ -69,8 +70,8 @@ private:
     // Array of reserved key codes in sorted order
     std::vector<sal_uInt16> m_aReservedKeyCodes;
 
-    // Array mapping key code index to a command. The indices are the same as for KEYCODE_ARRAY.
-    std::vector<OUString> m_aAssignments;
+    // Lazily created assignment data for each accelerator configuration
+    std::vector<AssignmentData> m_aAssignmentData;
 
     css::uno::Reference<css::uno::XComponentContext> m_xContext;
     css::uno::Reference<css::ui::XAcceleratorConfiguration> m_xGlobal;
@@ -129,7 +130,9 @@ private:
     sal_Int32 MapKeyCodeToPos(const vcl::KeyCode& rCode) const;
     void StartFileDialog(StartFileDialogType nType, const OUString& rTitle);
 
-    void Init(const css::uno::Reference<css::ui::XAcceleratorConfiguration>& pAccMgr);
+    void
+    LoadAcceleratorConfig(const css::uno::Reference<css::ui::XAcceleratorConfiguration>& pAccMgr);
+    void Init();
     void ResetConfig();
     void ClearSaveInComboBox();
     void AddFrameToSaveInComboBox(const css::uno::Reference<css::frame::XFrame>& xFrame);
@@ -137,6 +140,17 @@ private:
     void HandleScopeChanged();
     bool IsReservedKeyCode(const vcl::KeyCode& rCode) const;
     static std::vector<sal_uInt16> GetReservedKeyCodes();
+    // Find the assignments array for the current configuration or return nullptr if there isn’t one
+    // yet
+    std::vector<OUString>* FindAssignments();
+    // Get the assignments for the current configuration or lazily create it if there isn’t one yet
+    std::vector<OUString>& GetAssignments();
+    static void Apply(const css::uno::Reference<css::ui::XAcceleratorConfiguration>& pAccMgr,
+                      const std::vector<OUString>& rAssignments);
+    void Apply(const css::uno::Reference<css::ui::XAcceleratorConfiguration>& pAccMgr)
+    {
+        Apply(pAccMgr, GetAssignments());
+    };
 
 public:
     SfxAcceleratorConfigPage(weld::Container* pPage, weld::DialogController* pController,
@@ -145,8 +159,6 @@ public:
 
     virtual bool FillItemSet(SfxItemSet*) override;
     virtual void Reset(const SfxItemSet*) override;
-
-    void Apply(const css::uno::Reference<css::ui::XAcceleratorConfiguration>& pAccMgr);
 };
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
